# ChatServer

./: .gitignore  BuildOption.h  CCpuUsage.cpp  CCpuUsage.h  CLogger.cpp  CLogger.h  CMakeLists.txt  CMap.cpp  CMap.h  CRecvBuffer.cpp  CRecvBuffer.h  CRingBuffer.cpp  CRingBuffer.h  CSendBuffer.cpp  CSendBuffer.h  CSerializeBuffer.cpp  CSerializeBuffer.h  ChatServer.wsp  Client.cpp  Client.h  CommonProtocol.h  Container.h  ContentJob.cpp  ContentJob.h  CoreGlobal.cpp  CoreGlobal.h  CrashDump.cpp  CrashDump.h  DBConnection.cpp  DBConnection.h  DBException.h  Executable.cpp  Executable.h  Executables.h  Group-DESKTOP-CR7OB23.cpp  Group.cpp  Group.h  GroupExecutable-DESKTOP-G80C9UT.h  GroupExecutable.cpp  GroupExecutable.h  (+94 more)
.github/workflows/: cmake-single-platform.yml  windows-build.yml
enc_temp_folder/51a34a945de238e7b8885267f0e43a/: CSerializeBuffer.h
include/: BuildOption.h  CCpuUsage.h  CLogger.h  CRecvBuffer.h  CRingBuffer.h  CSendBuffer.h  Container.h  CoreGlobal.h  CrashDump.h  DBConnection.h  DBException.h  Executable.h  Executables.h  Group.h  GroupExecutable.h  GroupManager.h  GroupTypes.h  HardwareMonitor.h  IOCP.h  LockFreeData.h  LockFreeFixedQueue.h  LockFreeQueue.h  LockFreeStack.h  LockGuard.h  LockPool.h  LockQueue.h  LockStack.h  Macro.h  MemoryPool.h  MemoryUsage.h  ModernObjectPool.h  MonitoringStats.h  MultiThreadObjectPool.h  MyWindows.h  NormalIOCP.h  NormalSocket.h  Overlapped.h  PointerBuffer.h  PostSendExecutable.h  ProcessMonitor.h  (+29 more)
include/externalHeader/: optick.config.h
include/externalHeader/dpp/coro/: async.h  coro.h
include/externalHeader/easy/: profiler.h
lib/release/: tacopie.lib
src/: CCpuUsage.cpp  CLogger.cpp  CRecvBuffer.cpp  CRingBuffer.cpp  CSendBuffer.cpp  CoreGlobal.cpp  CrashDump.cpp  DBConnection.cpp  Executable.cpp  Group.cpp  GroupExecutable.cpp  GroupManager.cpp  HardwareMonitor.cpp  LockFreeStack.cpp  LockGuard.cpp  LockPool.cpp  LockStack.cpp  MemoryPool.cpp  MemoryUsage.cpp  NormalIOCP.cpp  NormalSocket.cpp  PostSendExecutable.cpp  ProcessMonitor.cpp  Profiler.cpp  RUDPSocket.cpp  RecvExecutable.cpp  RedisConnection.cpp  ReleaseExecutable.cpp  SendBuffer.cpp  SendExecutable.cpp  Session.cpp  SettingParser.cpp  SingleThreadObjectPool.cpp  SingleThreadQ.cpp  SpinLockPool.cpp  SubnetManager.cpp  TLSLockFreeQueue.cpp  TLSLockFreeStack.cpp  TLSPool.cpp  Utility.cpp  (+1 more)
tests/: CMakeLists.txt  ModernObjectPoolTest.h  MultiThreadObjectPoolTest.h  test_main.cpp
받은 파일/: Config - 복사본.cnf  Config.cnf  Protocol.h  작업문서.txt
